# jpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: include.md  include_v2.md  src.md
include/: internal.hpp  json.hpp  json_v2.hpp
include/json/: internal.hpp  object_t.hpp  object_t_impl.hpp
include/json_v2/: generate.hpp  image.hpp  image_KV.hpp  image_array.hpp  image_iter.hpp  image_object.hpp  parse.hpp  string_like.hpp
src/: test_runner.cpp
test/cases/: array_mixed.json  object_nested.json  simple_number.json  unicode_string.json
test/expected/: array_mixed.out  object_nested.out  simple_number.out  simple_string.out  unicode_string.out
